--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.6",
+    "react-native-elements": "^3.4.2",
     "react-redux": "^8.0.4",
     "tailwind-react-native-classnames": "^1.5.1"
   },
